Make obfuscation engine Java 8 and cross-version compatible